@@ -1,0 +1,23 @@
+[
+            // See: https://en.wikipedia.org/wiki/Polish_alphabet
+            // ą	ć	ę	ł	ń	ó	ś	ź	ż
+            // Ą	Ć	Ę	Ł	Ń	Ó	Ś	Ź	Ż
+			["a&'", "ą"],
+			["A&'", "Ą"],
+			["C&'", "Ć"],
+			["c&'", "ć"],
+            ["e&'", "ę"],
+			["E&'", "Ę"],
+			["l&'", "ł"], 
+			["L&'", "Ł"],
+			["n&'", "ń"], 
+			["N&'", "Ń"],
+			["O&'", "Ó"], 
+			["o&'", "ó"],
+			["S&'", "Ś"],
+			["s&'", "ś"], 
+			["Z&'", "Ź"],
+			["z&'", "ź"],
+			["Z&.", "Ż"],
+			["z&.", "ż"]
+			];
